[package]
name = "depdiff"
version = "0.2.0"
authors = ["Christopher J. Stehno <chris@stehno.com>"]
edition = "2018"
description = "Resolves and reports on artifacts in your local repository that are missing from a remote repository."

[dependencies]
clap = {version = "2.32.0", features = ["yaml"]}
log = "0.4"
fern = "0.5.7"
reqwest = "0.9.9"
rayon = "1.0.3"
tar = "0.4.22"
dirs = "1.0.5"